# chromnium

./: .gitignore  README.md  USER_GUIDE.md
config/: args.gn  example-profile-B.json  example-profile.json
config/profiles/: linux-gt1030.json  linux-gtx1050.json  linux-hd.json  linux-hd2500.json  linux-hd4000.json  linux-hd4600.json  linux-hd520.json  linux-hd5600.json  linux-intel-00009a49.json  linux-nvidia-0000174d.json  linux-rtx3060.json  linux-rx480.json  linux-uhd.json  linux-uhd610.json  linux-uhd620.json  linux-uhd630.json  linux-uhd770.json  linux-unknown-amdcedardr.json  linux-vega11.json  mac-m1-air13.json  mac-m1-imac24.json  mac-m1-max-mbp14.json  mac-m1-max-mbp16.json  mac-m1-mbp13.json  mac-m1-pro-mbp14.json  mac-m1-pro-mbp16.json  mac-m2-air13.json  mac-m2-air15.json  mac-m2-max-mbp14.json  mac-m2-max-mbp16.json  mac-m2-mbp13.json  mac-m2-pro-mbp14.json  mac-m2-pro-mbp16.json  mac-m3-air13.json  mac-m3-air15.json  mac-m3-imac24.json  mac-m3-max-mbp14.json  mac-m3-max-mbp16.json  mac-m3-mbp14.json  mac-m3-pro-mbp14.json  (+130 more)
patches/: 0001-chronium-add-fingerprint-profile-switch-and-Fingerpr.patch  0001-chronium-per-profile-performance.memory.jsHeapSizeLi.patch  0002-chronium-add-Mojo-plumbing-browser-renderer-for-fing.patch  0003-chronium-seeded-canvas-pixel-noise-in-toDataURL-and-.patch  0004-chronium-sync-seed-propagation-getImageData-noise-We.patch  0005-chronium-seeded-sub-perceptible-noise-on-AudioBuffer.patch  0006-chronium-per-profile-navigator.userAgent-navigator.p.patch  0007-chronium-per-profile-screen.-width-height-availWidth.patch  0008-chronium-hardwareConcurrency-deviceMemory-maxTouchPo.patch  0009-chronium-per-profile-navigator.languages-Element.get.patch  0010-chronium-hide-navigator.webdriver-per-profile-IANA-t.patch  0011-chronium-per-profile-seeded-HMAC-on-MediaDeviceInfo-.patch  0012-chronium-WebGPU-adapter-spoof-suppress-two-Chronium-.patch  0013-chronium-per-profile-UA-Client-Hints-via-ChromeConte.patch  0014-chronium-permissions.query-DENIED-ASK-per-profile-fo.patch  0016-chronium-skip-TLS-Trust-Anchor-IDs-extension-0xCA34-.patch  0017-chronium-route-per-profile-UA-Client-Hints-through-e.patch  0018-chronium-per-profile-WebAuthn-UVPA-WebGL-getSupporte.patch  0019-chronium-virtualize-WebGL-surface-getParameter-MAX_-.patch  0020-chronium-HMAC-license-token-gate.patch  0021-chronium-account-label-chip-in-URL-bar.patch  README.md
scripts/: apply-patches.bat  build.bat  chronium.ps1  convert-shardx-profiles.py  fetch.bat  (+15 more)
